--- a/GFM/localisation/UrbanTerrain.csv
+++ b/GFM/localisation/UrbanTerrain.csv
@@ -80,7 +80,7 @@ ankara;Grassland Hills;;;;;;;;;;;;;
 tblisi;Montane Grassland;;;;;;;;;;;;;
 erivan;Grassland Hills;;;;;;;;;;;;;
 baku;Montane Grassland;;;;;;;;;;;;;
-jerusalem;Grassland;;;;;;;;;;;;;
+jerusalem;Farmlands;;;;;;;;;;;;;
 baghdad;Grassland;;;;;;;;;;;;;
 damascus;Semidesert;;;;;;;;;;;;;
 lvov;Forest;;;;;;;;;;;;;
